# ops

./: Cargo.toml  Ops.yaml  README.md  cio.yaml
.github/workflows/: ci.yaml
src/: command.rs  container.rs  main.rs  plan.rs  run.rs
tests/: basics.rs  build.rs  shell.rs  utils.rs
tests/workspaces/docker_build/: cio.yaml
tests/workspaces/failing_mission/: cio.yaml
tests/workspaces/hello_world/: cio.yaml
