[package]
name = "ops"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
nix = { version = "0.29.0", features = ["user"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.12.0"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.16"
